--- a/ServiceCenterAccounting/ServiceCenterAccounting.csproj
+++ b/ServiceCenterAccounting/ServiceCenterAccounting.csproj
@@ -72,8 +72,14 @@
     <Compile Include="Reports_Creator.Designer.cs">
       <DependentUpon>Reports_Creator.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Action_for_Orders.resx">
+      <DependentUpon>Action_for_Orders.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main_Form.resx">
       <DependentUpon>Main_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Options.resx">
+      <DependentUpon>Options.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -84,6 +90,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Reports_Creator.resx">
+      <DependentUpon>Reports_Creator.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
