--- a/ServiceCenterAccounting/ServiceCenterAccounting.csproj
+++ b/ServiceCenterAccounting/ServiceCenterAccounting.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Action_for_Orders.Designer.cs">
       <DependentUpon>Action_for_Orders.cs</DependentUpon>
     </Compile>
+    <Compile Include="Initial_Setup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Initial_Setup.Designer.cs">
+      <DependentUpon>Initial_Setup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main_Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     </Compile>
     <EmbeddedResource Include="Action_for_Orders.resx">
       <DependentUpon>Action_for_Orders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Initial_Setup.resx">
+      <DependentUpon>Initial_Setup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main_Form.resx">
       <DependentUpon>Main_Form.cs</DependentUpon>
