--- a/ServiceCenterAccounting/packages.config
+++ b/ServiceCenterAccounting/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="EntityFramework6.Npgsql" version="6.4.3" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Npgsql" version="5.0.5" targetFramework="net472" />
