--- a/ServiceCenterAccounting/ServiceCenterAccounting.csproj
+++ b/ServiceCenterAccounting/ServiceCenterAccounting.csproj
@@ -146,6 +146,12 @@
       <DependentUpon>Authorization.cs</DependentUpon>
     </Compile>
     <Compile Include="Connect.cs" />
+    <Compile Include="InfoAboutOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InfoAboutOrder.Designer.cs">
+      <DependentUpon>InfoAboutOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Initial_Setup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -192,6 +198,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Authorization.resx">
       <DependentUpon>Authorization.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InfoAboutOrder.resx">
+      <DependentUpon>InfoAboutOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Initial_Setup.resx">
       <DependentUpon>Initial_Setup.cs</DependentUpon>
